--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,33 @@
 /* You can add global styles to this file, and also import other style files */
+:root {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  box-sizing: border-box;
+  --primary-color: rgb(255, 165, 0);
+  --primary-background-color: rgba(255, 165, 0, 0.2);
+  --primary-color-disabled: rgba(255, 165, 0, 0.5);
+  --primary-text: rgba(255, 255, 255, 1);
+  --secondary-text: rgba(92, 92, 92, 1);
+  --secondary-text-disabled: rgba(92, 92, 92, 0.5);
+}
+
+body {
+  background-color: var(--primary-background-color);
+  margin: 0;
+  overflow: hidden;
+}
+
+button {
+  margin: 1rem 0 1rem 0.5rem;
+  height: 3rem;
+  width: 6rem;
+  background-color: var(--primary-color);
+  color: var(--secondary-text);
+  border: 0;
+  font-size: 1rem;
+}
+
+button:disabled {
+  background-color: var(--primary-color-disabled);
+  color: var(--secondary-text-disabled);
+}
